# voyara

./: .gitignore  DEPLOY.md  GROQ_SETUP.md  render.yaml
.claude/: launch.json
.github/workflows/: contracts.yml
ai_service/: .env.example  pyproject.toml
ai_service/app/: config.py  main.py
ai_service/app/ai/: agent.py  cost_tracker.py  prompts.py  tool_handlers.py  tools.py
ai_service/app/api/: routes.py  schemas.py  whatsapp_routes.py
ai_service/app/data/: landmark_aliases.py
ai_service/app/extractors/: audio_download.py  base.py  instagram.py  tiktok.py  web.py  youtube.py
ai_service/app/google_places/: client.py
ai_service/app/services/: chat_service.py  orchestrator.py  rails_client.py  rails_contract.py  rails_schemas.py  whatsapp_client.py  whatsapp_handler.py
ai_service/app/transcription/: whisper_service.py
ai_service/app/vision/: frame_analyzer.py  video_text_reader.py
ai_service/scripts/: lint_silent_excepts.py  smoke_canonical.py  smoke_scenarios.json  transcribe.py
ai_service/tests/: conftest.py  test_extract_structuring.py  test_invariants.py  test_link_merge.py  test_lint_silent_excepts.py  test_manual_assist.py  test_manual_assist_research.py  test_manual_mode_isolation.py  test_payload_shapes.py  test_post_processing.py  test_race_preservation.py  test_rails_contract.py  test_rails_schemas.py  test_reenrich_places.py
backend/: .gitignore  Gemfile
backend/app/controllers/: application_controller.rb
backend/app/models/: day_plan.rb  flight.rb  itinerary_item.rb  link.rb  lodging.rb  transport.rb  trip.rb  trip_note.rb
backend/app/serializers/: day_plan_serializer.rb  itinerary_item_serializer.rb  link_serializer.rb  trip_serializer.rb
backend/config/: credentials.yml.enc  database.yml  deploy.yml  master.key  routes.rb
backend/config/environments/: production.rb
backend/config/initializers/: 0_fix_has_many_inversing.rb  cors.rb  sentry.rb
backend/db/: schema.rb  seeds.rb
backend/db/migrate/: 20260329020254_create_trips.rb  20260329020259_create_day_plans.rb  20260329020302_create_itinerary_items.rb  20260329020303_create_links.rb  20260330030838_add_ai_mode_to_trips.rb  20260330040517_add_num_days_to_trips.rb  20260330042303_add_feature_columns_to_itinerary_items.rb  20260330043633_add_traveler_profile_to_trips.rb  20260330043634_add_city_to_day_plans.rb  20260330201513_create_flights.rb  20260330201514_create_lodgings.rb  20260330201515_create_transports.rb  20260330201516_create_trip_notes.rb  20260330230814_add_source_to_itinerary_items.rb  20260331065904_add_geo_fields_to_lodgings.rb  20260402004941_add_user_id_to_trips.rb  20260418233300_add_share_token_to_trips.rb  20260420233707_expand_day_plans_for_rigidity.rb  20260420233708_expand_itinerary_items_for_origin.rb  20260422164500_add_activity_model_to_itinerary_items.rb  20260422184500_add_item_role_to_itinerary_items.rb  20260425000000_add_is_staging_to_trips.rb  20260427000000_add_data_integrity_constraints.rb
backend/test/fixtures/: day_plans.yml  itinerary_items.yml  links.yml  trips.yml
backend/test/models/: day_plan_test.rb  itinerary_item_test.rb  (+1 more)
e2e/: .gitignore  package-lock.json  package.json  playwright.config.ts  smoke.spec.ts
frontend/: package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/public/: index.html
frontend/src/: App.js  index.css  index.js
mobile/: .env.example  App.tsx  README.md  app.json  eas.json  package-lock.json  package.json
(+146 files in other folders)
