[project]
name = "ai-itinerary-service"
version = "0.1.0"
description = "AI service for travel itinerary extraction and generation"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "anthropic>=0.42",
    # yt-dlp: TikTok/Instagram/YouTube change their internal video formats
    # constantly. An older yt-dlp silently breaks extraction ("Unable to
    # extract webpage video data"), which looks like a block but is just
    # an outdated library. We pin to a recent floor and re-pull on every
    # deploy via build-command so production never lags more than a
    # couple of weeks behind the yt-dlp patches.
    "yt-dlp>=2025.09",
    "imageio-ffmpeg>=0.5.1",
    "requests>=2.32",
    "instaloader>=4.13",
    "faster-whisper>=1.1",
    "Pillow>=10.4",
    "beautifulsoup4>=4.12",
    "readability-lxml>=0.8",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "eval_type_backport>=0.2.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
